@@ -40,6 +40,12 @@ Summary of important user-visible changes for version 6 (yyyy-mm-dd):
     Octave:colon-complex-argument   : when any arg is complex
     Octave:colon-nonscalar-argument : when any arg is non-scalar
 
+- The `regexp` and related functions now correctly handle and *require*
+  strings in UTF-8 encoding.  As with any other function that requires
+  strings to be encoded in Octave's native encoding, you can use
+  "native2unicode" to convert from your preferred locale.  For example,
+  the copyright symbol in UTF-8 is `native2unicode (169, "latin1")`.
+
 #### Graphics backend
 
 - Graphic primitives now accept a color property value of `"none"`
